k8s/deployment.yaml
# golang-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-facturacion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-facturacion
  template:
    metadata:
      labels:
        app: back-facturacion
    spec:
      containers:
      - name: back-facturacion
        image: gcr.io/annular-form-401215/gcr-alpine:{GITHUB_SHA}
        ports:
        - containerPort: 1010
