k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-back-facturacion
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  rules:
    - host: api.facturacion.lumonidy.studio
      http:
        paths:
          - backend:
              service:
                name: back-facturacion
                port:
                  number: 80
            pathType: Prefix
            path: /
  tls:
    - hosts:
        - api.facturacion.lumonidy.studio
      secretName: facturacion-tls
